--- a/MAIN/src/view/Home.fxml
+++ b/MAIN/src/view/Home.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
    <children>
       <ImageView fitHeight="768.0" fitWidth="1024.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Downloads/Home_Mesa%20de%20trabajo%201.png" />
+            <Image url="file:/Users/nguyenbathiem/o-an-quan-thiem/MAIN/src/view/images/Home.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnPlay" layoutX="141.0" layoutY="289.0" mnemonicParsing="false" opacity="0.0" prefHeight="76.0" prefWidth="263.0" text="Play">
+      <Button fx:id="btnStart" layoutX="141.0" layoutY="289.0" mnemonicParsing="false" opacity="0.0" prefHeight="76.0" prefWidth="263.0" text="Start">
          <textFill>
             <LinearGradient endX="1.0" endY="1.0">
                <stops>
