update player, cell, board, playcontroller

--- a/MAIN/src/view/Play.fxml
+++ b/MAIN/src/view/Play.fxml
@@ -16,12 +16,12 @@
             <Image url="file:/Users/nguyenbathiem/Downloads/play-01.png" />
          </image>
       </ImageView>
-      <Text fx:id="scorePlayer1" fill="WHITE" layoutX="240.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="100">
+      <Text fx:id="scorePlayer1" fill="WHITE" layoutX="240.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
          <font>
             <Font size="50.0" />
          </font>
       </Text>
-      <Text fx:id="scorePlayer2" fill="WHITE" layoutX="615.0" layoutY="700.0" strokeType="OUTSIDE" strokeWidth="0.0" text="100">
+      <Text fx:id="scorePlayer2" fill="WHITE" layoutX="615.0" layoutY="700.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
          <font>
             <Font size="50.0" />
          </font>
@@ -30,7 +30,7 @@
       <Button fx:id="btnHelp" layoutX="892.0" layoutY="90.0" mnemonicParsing="false" opacity="0.0" prefHeight="44.0" prefWidth="104.0" text="Help" />
       <Pane fx:id="cell01" layoutX="149.0" layoutY="267.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="117.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell01" fill="WHITE" layoutX="117.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -49,7 +49,7 @@
       </Pane>
       <Pane fx:id="cell02" layoutX="292.0" layoutY="267.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="118.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell02" fill="WHITE" layoutX="118.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -68,7 +68,7 @@
       </Pane>
       <Pane fx:id="cell03" layoutX="438.0" layoutY="263.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell03" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -87,7 +87,7 @@
       </Pane>
       <Pane fx:id="cell04" layoutX="585.0" layoutY="266.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell04" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -106,7 +106,7 @@
       </Pane>
       <Pane fx:id="cell05" layoutX="730.0" layoutY="267.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell05" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -123,14 +123,14 @@
             </ImageView>
          </children>
       </Pane>
-      <Text fx:id="numBigGem2" fill="WHITE" layoutX="977.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1">
+      <Text fx:id="numGemsCell06" fill="WHITE" layoutX="977.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
       <Pane fx:id="cell07" layoutX="730.0" layoutY="398.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell07" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -149,7 +149,7 @@
       </Pane>
       <Pane fx:id="cell08" layoutX="585.0" layoutY="397.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell08" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -168,7 +168,7 @@
       </Pane>
       <Pane fx:id="cell09" layoutX="438.0" layoutY="397.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell09" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -187,7 +187,7 @@
       </Pane>
       <Pane fx:id="cell10" layoutX="292.0" layoutY="397.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell10" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -206,7 +206,7 @@
       </Pane>
       <Pane fx:id="cell11" layoutX="149.0" layoutY="397.0" prefHeight="131.0" prefWidth="139.0">
          <children>
-            <Text fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
+            <Text fx:id="numGemsCell11" fill="WHITE" layoutX="120.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="5">
                <font>
                   <Font size="24.0" />
                </font>
@@ -223,7 +223,7 @@
             </ImageView>
          </children>
       </Pane>
-      <Text fx:id="numBigGem1" fill="WHITE" layoutX="33.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1">
+      <Text fx:id="numGemsCell00" fill="WHITE" layoutX="33.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1">
          <font>
             <Font size="24.0" />
          </font>
