--- a/MAIN/src/view/Play.fxml
+++ b/MAIN/src/view/Play.fxml
@@ -11,22 +11,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="770.0" fitWidth="1024.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="807.0" fitWidth="1024.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="file:/Users/nguyenbathiem/o-an-quan-thiem/MAIN/src/view/images/play.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="162.0" layoutY="184.0" prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <ImageView fx:id="endGameScreen" fitHeight="400.0" fitWidth="700.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="file:/Users/nguyenbathiem/o-an-quan-thiem/MAIN/src/view/images/winner.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="btnHomeWinner" layoutX="128.0" layoutY="288.0" mnemonicParsing="false" opacity="0.0" prefHeight="52.0" prefWidth="179.0" text="Home" />
-            <Button fx:id="btnPlayAgain" layoutX="128.0" layoutY="205.0" mnemonicParsing="false" opacity="0.0" prefHeight="52.0" prefWidth="179.0" text="Play Again" />
-         </children>
-      </AnchorPane>
       <Text fx:id="scorePlayer1" fill="WHITE" layoutX="240.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
          <font>
             <Font size="50.0" />
@@ -259,5 +248,26 @@
             <Image url="file:/Users/nguyenbathiem/o-an-quan-thiem/MAIN/src/view/images/frame-03.png" />
          </image>
       </ImageView>
+      <AnchorPane fx:id="endGameScreen" layoutX="162.0" layoutY="184.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <ImageView fitHeight="400.0" fitWidth="700.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="file:/Users/nguyenbathiem/o-an-quan-thiem/MAIN/src/view/images/winner.png" />
+               </image>
+            </ImageView>
+            <Text fx:id="winnerScore" fill="WHITE" layoutX="175.0" layoutY="168.0" strokeType="OUTSIDE" strokeWidth="0.0" text="100" textAlignment="CENTER">
+               <font>
+                  <Font size="58.0" />
+               </font>
+            </Text>
+            <Button fx:id="btnHomeWinner" layoutX="128.0" layoutY="288.0" mnemonicParsing="false" opacity="0.0" prefHeight="52.0" prefWidth="179.0" text="Home" />
+            <Button fx:id="btnPlayAgain" layoutX="128.0" layoutY="205.0" mnemonicParsing="false" opacity="0.0" prefHeight="52.0" prefWidth="179.0" text="Play Again" />
+            <Text fx:id="winnerName" fill="WHITE" layoutX="270.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" textAlignment="CENTER">
+               <font>
+                  <Font size="58.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
